# pypkg

./: .gitignore  README.md  pyproject.toml
pypkg/: __init__.py
pypkg/core/: add.py
pypkg/tests/: test_add.py
